Arrumando menu-avatar dos curriculos e adicionando botão logout a tela de usuarios.

--- a/src/app/pages/curriculo-section/curriculo-section.component.html
+++ b/src/app/pages/curriculo-section/curriculo-section.component.html
@@ -1,5 +1,5 @@
     <div *ngIf="showNotFoundImg" class="bg-white">
-      <img src="./../../../assets/404.jpg" alt="404 not found" class="w-full h-screen object-contain" >
+      <img src="./../../../assets/404.jpg" alt="404 not found" class="object-contain w-full h-screen" >
     </div>
     <div *ngIf="userDetails && !showNotFoundImg" class="wrapper mt-[6rem] max-w-6xl max-h-full pb-10 mx-auto grid grid-cols-8 grid-rows-4 gap-4 items-start ">
 
