--- a/src/app/pages/post-section/post-section.component.html
+++ b/src/app/pages/post-section/post-section.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="userDetails" class="grid items-start lg:max-w-[100rem] max-w-6xl grid-cols-12 gap-6 pt-20 mx-auto mb-12 px-4">
   <app-perfil-sidebar [dadosPerfilRecebido]="userDetails" class="col-span-3"></app-perfil-sidebar>
-  <main class="col-span-6 flex flex-col gap-4">
+  <main class="flex flex-col col-span-6 gap-4">
     <app-post></app-post>
     <app-post></app-post>
     <app-post></app-post>
