--- a/src/app/pages/curriculo-section/curriculo-section.component.html
+++ b/src/app/pages/curriculo-section/curriculo-section.component.html
@@ -12,22 +12,30 @@
   <!-- Perfil Sidebar na primeira linha -->
   <app-perfil-sidebar
     [dadosPerfilRecebido]="userDetails"
-    class="col-span-2 row-span-3 mb-[2rem]"
+    class="col-span-2 row-span-2 col-start-2 row-start-1"
   ></app-perfil-sidebar>
 
   <!-- Sobre -->
   <article
-    class="bg-white col-span-4 rounded-md p-2 shadow-md col-start-3 row-start-1 row-span-2 min-h-14 h-[9.8rem] overflow-auto align-middle"
+    class="bg-white col-span-4 rounded-md p-2 shadow-md col-start-4 row-start-1 row-span-2 min-h-0 overflow-auto align-middle"
   >
     <h3
       class="flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3"
     >
-      Sobre
+      Main
     </h3>
     <div class="p-1" [innerHTML]="this.sobre | markdown"></div>
+    <div class="p-1" [innerHTML]="this.contato | markdown"></div>
+    <div class="p-1" [innerHTML]="this.experiencia | markdown"></div>
+    <div class="p-1" [innerHTML]="this.formacao | markdown"></div>
+    <div class="p-1" [innerHTML]="this.habilidades | markdown"></div>
+    <div class ="p-1" [innerHTML]="this.idiomas | markdown"></div>
+
   </article>
 
-  <!-- Contato -->
+  <app-avatar-component class="col-start-2 row-start-2 h-0"></app-avatar-component>
+
+  <!-- Contato
   <aside
     class="bg-white col-span-4 rounded-md p-2 shadow-md col-start-7 row-start-1 row-span-3 h-[16.4rem] overflow-auto align-middle"
   >
@@ -36,10 +44,9 @@
     >
       Contato
     </h3>
-    <div class="p-1" [innerHTML]="this.contato | markdown"></div>
   </aside>
 
-  <!-- Experiências -->
+
   <article
     class="bg-white col-span-4 rounded-md col-start-3 row-start-3 p-2 shadow-md row-span-4 overflow-auto h-[9.8rem] align-middle"
   >
@@ -48,10 +55,9 @@
     >
       Experiências
     </h3>
-    <div class="p-1" [innerHTML]="this.experiencia | markdown"></div>
   </article>
 
-  <!-- Formações -->
+
   <article
     class="bg-white col-span-4 rounded-md col-start-3 row-start-2 p-2 shadow-md overflow-auto h-[9.8rem] align-middle"
   >
@@ -60,13 +66,11 @@
     >
       Formações
     </h3>
-    <div class="p-1" [innerHTML]="this.formacao | markdown"></div>
   </article>
 
-  <!-- Avatares -->
-  <app-avatar-component class="col-start-7 row-start-3"></app-avatar-component>
 
-  <!-- Habilidades -->
+
+
   <article
     class="col-span-3 col-start-1 row-start-4 p-2 overflow-auto align-middle bg-white rounded-md shadow-md"
   >
@@ -75,10 +79,9 @@
     >
       Habilidades
     </h3>
-    <div class="p-1" [innerHTML]="this.habilidades | markdown"></div>
   </article>
 
-  <!-- Conhecimentos -->
+
   <article
     class="justify-center col-span-3 col-start-4 row-start-4 p-2 overflow-auto align-middle bg-white rounded-md shadow-md"
   >
@@ -87,10 +90,9 @@
     >
       Conhecimentos
     </h3>
-    <div class="p-1" [innerHTML]="this.conhecimentos | markdown"></div>
   </article>
 
-  <!-- Idiomas -->
+
   <article
     class="justify-center col-span-4 col-start-7 row-start-4 p-2 overflow-auto align-middle bg-white rounded-md shadow"
   >
@@ -99,6 +101,6 @@
     >
       Idiomas
     </h3>
-    <div class ="p-1" [innerHTML]="this.idiomas | markdown"></div>
-  </article>
+
+  </article> -->
 </div>
