--- a/src/app/shared/components/avatar-component/avatar-component.component.html
+++ b/src/app/shared/components/avatar-component/avatar-component.component.html
@@ -1,4 +1,4 @@
-<div class="pl-2 pr-2  items-center gap-[3rem] bg-white w-[18.71rem] h-[9.7rem] pt-1.5 rounded-md shadow-md overflow-y-auto">
+<div class="pl-2 pr-2  items-center gap-[3rem] bg-white w-[20.2rem] min-h-0 pt-1.5 rounded-md shadow-md overflow-y-auto">
   <h3 class="flex justify-center font-bold uppercase text-primary-500 font-inter mb-2 pb-1.3 border-t-0 border-r-0 border-l-0 border-b-2 border-orange-100">Curriculos</h3>
   <div class="flex flex-col items-center justify-center mb-3" *ngFor="let u of usuarios">
     <img (click)="this.navigateVisit(this.u.userId)" class="w-20 h-20 border-2 border-gray-500 border-solid rounded-full" src="{{'data:image/*;base64,' + this.u.avatar}}" alt="">
