--- a/src/app/pages/curriculo-section/curriculo-section.component.html
+++ b/src/app/pages/curriculo-section/curriculo-section.component.html
@@ -17,7 +17,7 @@
 
   <!-- Sobre -->
   <article
-    class="bg-white col-span-4 rounded-md p-2 shadow-md col-start-4 row-start-1 row-span-2 min-h-0 overflow-auto align-middle"
+    class="bg-white col-span-4 rounded-md p-2 shadow-md col-start-4 row-start-1 row-span-2 max-h-[800px] overflow-auto align-middle"
   >
     <h3
       class="flex justify-center font-bold uppercase text-primary-500 font-inter pb-1.3"
