--- a/src/app/pages/post-section/components/post/post.component.html
+++ b/src/app/pages/post-section/components/post/post.component.html
@@ -2,16 +2,16 @@
   <header class="w-full">
     <div class="flex flex-row pt-4 px-4 pb-3 items-start gap-3">
       <img
-        src="https://avatars.githubusercontent.com/u/103096096?v=4"
+        src="https://media.licdn.com/dms/image/C4D03AQEXFXJfUtG7Ow/profile-displayphoto-shrink_400_400/0/1634228230263?e=1707350400&v=beta&t=NXc5IhNsvQdXgzlQsydyOkEQXiaG2EL4oJCpIZBb5AE"
         class="img-perfil w-12 h-12 object-cover mb-2 rounded-full border-4 box-content border-secondary-500"
       >
       <div class="flex flex-col gap-0 leading-none items-start box-border">
         <strong class="text-sm font-inter font-semibold text-secondary-600 text-opacity-90 flex flex-row items-center leading-none pt-1 align-baseline ">
-          Victor Henri Vargas
-          <span class="ml-1 text-neutral-500 font-normal">(Victor)</span>
+          Vinicius Campos Ribeiro
+          <span class="ml-1 text-neutral-500 font-normal">(Marreta)</span>
         </strong>
         <div class="">
-          <span class="text-tiny font-inter font-normal text-black text-opacity-50">Consultor de aplicações e Vendas na Emerson Discrete Automation - </span>
+          <span class="text-tiny font-inter font-normal text-black text-opacity-50">Inovation | IT | Sales | Account | Iot | Integrator | Business | Industry 4.0 | IoT</span>
         </div>
         <span class="font-inter text-tiny text-black text-opacity-50 font-normal mt-1 leading-4">
           <time title='10 de Novembro às 21:35h' dateTime='2023-11-10 21:35:00'>Publicado há 1h</time>
@@ -22,12 +22,20 @@
   </header>
   <main class="">
     <div class="px-3 font-inter font-normal text-black text-opacity-90 text-justify leading-5 text-sm break-words hyphens-auto">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus repellat quasi facere at dicta beatae iste possimus, nostrum quia animi, voluptatum aut ipsum vero omnis veritatis ducimus hic! Voluptates, deserunt!</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, odio cum. Officia provident eaque labore, eum saepe explicabo ea aspernatur dignissimos nulla facilis, cum perferendis sunt eligendi, pariatur sequi amet?</p>
+      <p>
+        E eu que a 3 anos atrás estava fazendo meu primeiro Hello world.
+
+        Me achando o nerd 🤓, hahahah, mal sabia eu, onde estava me metendo! 🤪🤯😵‍💫🤡
+
+        É a vida de Dev;
+
+        Dias de lutas, dias de glória!🤣🤣🤣🤣
+      </p>
     </div>
+
     <img
-      class="mt-3 object-cover bg-cover object-center outline-0 aspect-auto overflow-clip "
-      src="https://plus.unsplash.com/premium_photo-1696879452108-aa341c92fe3e?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      class="mt-3 bg-cover object-cover outline-0 aspect-auto overflow-clip "
+      src="https://static.displate.com/1200x857/displate/2023-01-16/6844bfd40d44fcc2aacf3be13fcf1138_5a732d62c8c87a17eb4e963506aa8f31.jpg"
     >
   </main>
   <footer class="grid grid-cols-3 items-center justify-[initial] box-border min-h-[40px] text-black text-opacity-60 font-inter font-medium py-3 px-5 text-sm leading-none">
